# hpc_status

./: .gitignore  LICENSE  README.md  REFACTOR.md  api_client.py  cluster_monitor.py  dashboard_data.py  dashboard_server.py  generate_status_data.py  hpc_status_scraper.py  hpc_status_scraper_markdown.py  pyproject.toml  requirements.txt  run_dashboard.sh  workflow.yaml
configs/: config.hpcmp.yaml  config.noaa.yaml  config.yaml
docs/: REFACTOR_PLAN.md  REFACTOR_PROGRESS.md  api.md  configuration.md  deployment.md  glossary.md
examples/: 01-check-fleet-status.md  02-check-allocation.md  03-find-best-queue.md  20-ai-where-to-run.md  README.md
public/: app.js  index.html  queues.html  queues.js  quota.html  quota.js  styles.css
schemas/: README.md  openapi.yaml
schemas/api/: cluster-usage-response.schema.json  error-response.schema.json  fleet-status-response.schema.json  health-response.schema.json
schemas/common/: status-enum.schema.json  timestamp.schema.json  units.schema.json
schemas/models/: allocation-info.schema.json  queue-info.schema.json  resource-pool.schema.json  storage-info.schema.json  system-insight.schema.json  system-status.schema.json
scripts/: run.sh  test.sh
src/: __init__.py
src/collectors/: __init__.py  base.py  hpcmp.py  noaa.py  pw_cluster.py  storage.py
src/data/: __init__.py  models.py  normalization.py  persistence.py
src/insights/: __init__.py  recommendations.py
src/server/: __init__.py  main.py  (+3 more)
tests/: __init__.py  conftest.py
web/: index.html  insights.html  queues.html  quota.html  storage.html
yamls/: hsp.yaml
(+14 files in other folders)
